--- a/Client/Connection.html
+++ b/Client/Connection.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="Connection.css">
   </head>
   <body>
-    <h1> Ouvrir une session</h1>
+    <h1> WELCOME TO TWISTER</h1>
 
     <form action="">
-      <label for="login" class="blocksaisi" >
-        Login</label>
-      <input type="text" name="login" id="login" /><br />
+      <div class="Saisi">
+        <label for="login" class="blocksaisi" >Login</label>
+        <input type="text" name="login" id="login" /><br />
 
-      <label for="password" class="blocksaisi" > Password</label>
-      <input type="text" name="password" id="password"/><br />
-
-      <input type="submit" value="Connexion" /><br/>
+        <label for="password" class="blocksaisi" > Password</label>
+        <input type="password" name="password" id="password"/><br />
+      </div>
+      
+      <div class="Submit">
+        <input type="submit" value="OK" /><br/>
+      </div>
     </form>
     
     <a href=" ">Mot de passe perdu</a><br />
