--- a/Client/Connection.html
+++ b/Client/Connection.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Connection</title>
-    <link rel="stylesheet" href="Connection.css">
+    <link rel="stylesheet" href="Client/Connection.css">
   </head>
   <body>
     <h1>TWISTER</h1>
