--- a/Client/Enregistrement.html
+++ b/Client/Enregistrement.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Enregistrement</title>
-    <link rel="stylesheet" href="Enregistrement.css">
+    <title>Inscription</title>
+    <link rel="stylesheet" href="Client/Enregistrement.css">
   </head>
   <body>
     <div class="body">
