--- a/Client/Enregistrement.html
+++ b/Client/Enregistrement.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inscription</title>
-    <link rel="stylesheet" href="Client/Enregistrement.css">
+    <link rel="stylesheet" href="Enregistrement.css">
   </head>
   <body>
     <div class="body">
     <h1>INSCRIPTION</h1>
 
     <form action="">
+      <div class="divReste">
         <label for="prenom" class="blockReste">Prenom</label>
         <input type="text" name="prenom" id="prenom" /><br />
 
