--- a/Client/VERSION_B/Welcome.html
+++ b/Client/VERSION_B/Welcome.html
@@ -13,8 +13,8 @@
         <h1>HI ! </h1>
         <h1>WELCOME TO TWISTER ! </h1>
           <div class="button">
-            <input type=button value="SIGN IN "/>
-            <input type=button value="SIGN UP "/>
+            <button >SIGN UP</button>
+            <button>SIGN UP</button>
           </div>
       </div>
 
